--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 	<title><p><span style="color:GreenYellow;LAKE TANGANYIKA TOURISM</span></title>
 	<style>
-	body { background:url('12.jpeg') no-repeat;
+	body { background:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.agoda.com%2Fen-sg%2Fcity%2Fkigoma-tz.html&psig=AOvVaw1Wl0DJgLqIsG6_Nkq1Icdx&ust=1644770778624000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCICrsOjO-vUCFQAAAAAdAAAAABAD') no-repeat;
 			background-position:center;
 			background-size:cover;
 			color:black;
