--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title><p><span style="color:GreenYellow;LAKE TANGANYIKA TOURISM</span></title>
+	<title>LAKE TANGANYIKA TOURISM</title>
 	<style>
 	body { background:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.agoda.com%2Fen-sg%2Fcity%2Fkigoma-tz.html&psig=AOvVaw1Wl0DJgLqIsG6_Nkq1Icdx&ust=1644770778624000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCICrsOjO-vUCFQAAAAAdAAAAABAD') no-repeat;
 			background-position:center;
